--- a/rasputin/build.gradle
+++ b/rasputin/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'kotlin-android'
     id 'maven-publish'
 }
-
 android {
     compileSdk 30
 
@@ -41,14 +40,30 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
-afterEvaluate{
-    publishing{
-        publications{
-            release(MavenPublication){
+
+// Because the components are created only during the afterEvaluate phase, you must
+// configure your publications using the afterEvaluate() lifecycle method.
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
                 from components.release
-                groupId='com.usagibaru'
-                artifactId='rasputin'
-                version='1.0.1'
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.usagibaru'
+                artifactId = 'rasputin'
+                version = '1.0.3'
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                // Applies the component for the debug build variant.
+                from components.debug
+
+                groupId = 'com.usagibaru'
+                artifactId = 'rasputin-debug'
+                version = '1.0.3'
             }
         }
     }
