--- a/rasputin/build.gradle
+++ b/rasputin/build.gradle
@@ -24,8 +24,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '1.8'
@@ -48,7 +48,7 @@ afterEvaluate{
                 from components.release
                 groupId='com.usagibaru'
                 artifactId='rasputin'
-                version='1.0.0'
+                version='1.0.5'
             }
         }
     }
